Fix nightbox covering scroll
Put nightbox div inside the .parallax, changed position to sticky and changed blend mode to darken. The effect looks exactly the same but now doesn't interfere with scrolling.

--- a/style.css
+++ b/style.css
@@ -156,14 +156,14 @@ img {
 	filter: blur(5px);
 } */
 .nightbox {
-	position: absolute;
+	position: sticky;
 	top: 0;
 	/* border: 5px solid green; */
 	width: 100%;
 	height: 40%;
-	background: linear-gradient(180deg, rgb(116 97 153) 10%, transparent);
-	z-index: 100;
-	mix-blend-mode: multiply;
+	background: linear-gradient(180deg, rgb(15 0 44 / 66%) 10%, transparent);
+	z-index: 1;
+	mix-blend-mode: darken;
 }
 /* .vignette {
 	overflow: hidden;
@@ -202,13 +202,6 @@ img {
 	filter: contrast(0.8) saturate(1.5) hue-rotate(25deg) opacity(0.7) blur(1px);
 }
 .parallax__layer__3 img {
-	/* scale: 0.6;
-	transform: translateX(1300px) translateY(-1050px);
-
-	opacity: 1;
-	filter: contrast(0.6) saturate(1) hue-rotate(10deg) opacity(0.7) blur(1px); */
-
-	/* ———————————————————————————————————————————————————————————————————————————— */
 	scale: 0.9;
 	transform: translateX(-100px) translateY(-600px);
 	color: #b7894c;
@@ -218,13 +211,6 @@ img {
 }
 
 .parallax__layer__2 img {
-	/* scale: 0.9;
-	transform: translateX(-100px) translateY(-600px);
-	color: #b7894c;
-	opacity: 1;
-	filter: contrast(1.9) saturate(0.5) hue-rotate(-5deg) opacity(0.4)
-		brightness(0.8) blur(1px); */
-	/* ———————————————————————————————————————————————————————————————————————————— */
 	scale: 0.4;
 	transform: translateX(-100px) translateY(-200px);
 	color: #b7894c;
@@ -234,13 +220,6 @@ img {
 }
 
 .parallax__layer__1 img {
-	/* scale: 0.4;
-	transform: translateX(-100px) translateY(-200px);
-	color: #b7894c;
-	opacity: 1;
-	filter: contrast(0.6) saturate(1.4) hue-rotate(10deg) opacity(0.5)
-		brightness(1); */
-	/* ———————————————————————————————————————————————————————————————————————————— */
 	scale: 0.6;
 	transform: translateX(1300px) translateY(-1050px);
 
